# ChorusAi

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  DEMO_SCRIPT.md  Dockerfile  README.md  demo.md  railway.toml  submission.md  upgrade.md
Chorus/: .dockerignore  .gitignore  Dockerfile  README.md  agentplan.md  dolly_vocab.json  howtouseagent.md  orcplan.md  prompt.py  pyproject.toml  pytest.ini  start.sh  train.py
Chorus/agent_backend/: agent_invoke.py  identity.py  node.py
Chorus/bingusLM/: agentbanger.py  autoqwen.py  dollyablationtest.py  personagpt.py  personahacking.py  qwenstacy.py  scalar_qv_train.py  standing.py
Chorus/chorus/: __init__.py  autoreg_model.py  prefix_encoder.py
Chorus/chorus_escrow/: Anchor.toml  README.md  package.json
Chorus/frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
Chorus/orchestrator/: __init__.py  attachments.py  auth.py  billing.py  broadcast_completions.py  crypto.py  db.py  demo_agent.py  embeddings.py  engine.py  identity.py  invoker.py  lifespan.py  logconfig.py  main.py  metrics.py  models.py  payout.py  ratelimit.py  solana_client.py  store.py  watchdog.py
Chorus/scripts/: build_dolly_vocab_json.py  csv_to_token_ids.py  demo_fake_agents.md  demo_fake_agents.py  demo_smoke.ps1  demo_smoke.sh  dolly_bpe_responses.py  dolly_subword_pipeline.py  export_dolly_prompt_response.py  run_autoreg_prompt.py  run_chorus_sim.py  seed_demo.py  signaling_standby.py  train.py  train_autoreg_dolly.py  train_small_id_model.py
Chorus/tests/: __init__.py  conftest.py  test_autoreg_model.py  (+13 more)
(+68 files in other folders)
