[project]
name = "chorus-orchestrator"
version = "0.1.0"
description = "Chorus orchestrator backend service"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20",
  "anyio>=4.4",
  "cryptography>=42.0",
  "fastapi>=0.116.0",
  "httpx>=0.28.0",
  "numpy>=1.26.0",
  "pydantic>=2.7.0",
  "sniffio>=1.3",
  "starlette>=0.40",
  "uvicorn[standard]>=0.35.0",
  "websockets>=13.0",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=2.7.0",
]
dev = [
  "pytest>=8.3.0",
]
agent = [
  "websockets>=13.0",
]
dolly = [
  "polars>=1.0.0",
  "fsspec>=2024.1.0",
  "huggingface_hub>=0.24.0",
  "tokenizers>=0.20.0",
]
train = [
  "torch>=2.0.0",
  "tqdm>=4.66.0",
  "transformers>=4.36.0",
]

[tool.setuptools.packages.find]
include = ["orchestrator*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
